# Langflow

./: Testcase Generator.json  Week2_Assignments.docx
ResumeAnalyzer/: .gitignore  APPLICATION_IMPROVEMENTS.md  CONNECTIVITY_FIXES.md  FAILURE_ANALYSIS.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  START_HERE.md  UV_SETUP_GUIDE.md  VISUAL_SUMMARY.md  main.py  pyproject.toml  requirements.txt  run_server.py  setup.bat  setup.ps1  test_chain.py  test_connections.py
ResumeAnalyzer/backend/: database.py  main.py  rag_pipeline.py  test.py
ResumeAnalyzer/frontend/: app.py
Week1_Assignment/: LangFlow_Retrieval.docx
Week3_Assignments/: Week3_HomeAssignment.docx
Week4_Assignments/: CodeReviewer.json  Testcase Ingestion and retrieval.json
Week5_Day1/: ResumeBot_CustomMethods.docx
Week7_Assignment/: Week7_DeepEvalFaithfullness.docx
Week8_Assignments/: Week8_Day1_Assignment.docx
week4_day2/: Plan-ImpactBasedRegressionSuiteGeneratorAgent.prompt_1.md  Regression suite generator agent.pptx  UseCase_Jancy.docx  ~$eCase_Jancy.docx
week4_day2/agentwise/: Regression Suite Gen.md  ac_coverage_agent.md  audit_agent.md  domain_classification_agent.md  embedding_agent.md  generation_agent.md  human_gate_agent.md  ingestion_agent.md  orchestrator_agent.md  ranking_agent.md  retrieval_agent.md
